# PenGod

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: pengh-bugbounty-core.mdc  pengh-python-stack.mdc  pengh-trusted-environment.mdc
deploy/: nginx.conf
pengod/: __init__.py  cli.py  config.py
pengod/agents/: __init__.py  strategist_pipeline.py  stub_graph.py
pengod/api/: __init__.py  app.py  deps.py  routes_engagement.py  routes_search.py  routes_strategist.py
pengod/ingest/: __init__.py  case_parser.py  chunking.py  embeddings.py  models.py  pipeline.py
pengod/llm/: __init__.py  ollama_async.py
pengod/rag/: __init__.py  context_refiner.py  qdrant_store.py  search.py
pengod/recon/: __init__.py  probe.py  ssrf.py
pengod/schemas/: __init__.py  vulnerability.py
pengod/ui/: __init__.py  app.py
tests/: test_case_parser.py  test_ssrf.py  test_stub_graph.py
